Fix nav bar spacing

--- a/app/assets/stylesheets/calendar.css.sass
+++ b/app/assets/stylesheets/calendar.css.sass
@@ -1,14 +1,29 @@
 @import "variables"
 .nav-bar
-  height: 100px
-  .week-scroll
+  position: relative
+  .logout
+    display: inline-block
+    float: right
+    margin: 2em 2em 0 1.5em
     font-family: $main-font
-    font-size: 1.8em
-    color: $dark-teal
-    text-align: center
-    margin: 1.5em
-    span
-      color: $gray
+    text-transform: uppercase
+    font-size: .8em
+    a
+      text-decoration: none
+      color: $dark-teal
+      &:hover
+        color: $orange
+  .button
+    float: right
+.week-scroll
+  clear: both
+  font-family: $main-font
+  font-size: 1.8em
+  color: $dark-teal
+  text-align: center
+  margin: 1.5em
+  span
+    color: $gray
 .calendar
   width: 100%
   .times
