--- a/app/assets/stylesheets/form-elements.css.sass
+++ b/app/assets/stylesheets/form-elements.css.sass
@@ -17,7 +17,6 @@ input[type=submit], .button
   margin-top: 1em
   min-width: 100px
   height: 3em
-  float: right 
   text-transform: uppercase
   font-family: $main-font
   font-size: 1.2em
@@ -27,3 +26,6 @@ input[type=submit], .button
   &.primary
     background: $orange
     font-size: .8em
+    &:hover
+      background: $medium-teal
+      cursor: pointer
